# Diogo-Silva-VoxHorizon-Marketing-Control-Panel

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  ARCHITECTURE.md  Caddyfile  OPERATOR-BUILDOUT.md  PIPELINE-REBUILD-ARCHITECTURE.md  README.md  SECRETS.md  SETUP.md  VIDEO-ARCHITECTURE.md  VIDEO-BUILDOUT.md  docker-compose.yml  middleware.test.ts  middleware.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
.github/: CODEOWNERS
.github/workflows/: backup.yml  ci.yml  deploy-stack.yml  deploy-worker.yml
app/: error.test.tsx  error.tsx  globals.css  layout.test.tsx  layout.tsx  loading.test.tsx  loading.tsx  not-found.test.tsx  not-found.tsx  page.test.tsx  page.tsx
app/approvals/: ApprovalsTable.test.tsx  (+5 more)
components/: AppShell.test.tsx  AppShell.tsx  EmptyState.tsx  ThemeProvider.test.tsx  ThemeProvider.tsx  ThemeToggle.test.tsx  ThemeToggle.tsx  WorkerStatus.test.tsx  WorkerStatus.tsx
db/: .sqlfluff  .sqlfluffignore  SCHEMA.md  ci-bootstrap.sql
docs/: ci.md  codegen.md  migrations.md  observability.md
ekko-plugins/: README.md
ekko-skills/: README.md
hooks/: useActiveWorkItem.test.tsx  useActiveWorkItem.ts  useDaemonHealth.test.tsx  useDaemonHealth.ts  usePipelineEvents.test.tsx  usePipelineEvents.ts  useRealtimeStream.test.tsx  useRealtimeStream.ts
lib/: ad-entity.test.ts  ad-entity.ts  audit.test.ts  audit.ts  briefs-client.test.ts  briefs-client.ts  briefs-unified.test.ts  briefs-unified.ts  briefs.test.ts  briefs.ts  chat-context.test.ts  chat-context.ts  chat-grouping.test.ts  chat-grouping.ts  chat-read-status.test.ts  chat-read-status.ts  chat.test.ts  chat.ts  cost-estimator.test.ts  cost-estimator.ts  creatives-client.test.ts  creatives-client.ts  creatives-rows.test.ts  creatives-rows.ts  creatives.test.ts  creatives.ts  dashboard-types.ts  dashboard.test.ts  dashboard.ts  drive-routing.test.ts  drive-routing.ts  env.test.ts  env.ts  format-time.test.ts  format-time.ts  keyboard.test.ts  keyboard.ts  launches-extra.test.ts  launches.test.ts  launches.ts  (+20 more)
operator-daemon/: .dockerignore  Dockerfile  README.md  pyproject.toml
operator-daemon/tests/: conftest.py  test_daemon_run.py  test_healthz.py  test_hermes_exec.py  test_main.py  test_queue_client.py  test_startup.py
operator-daemon/voxhorizon_daemon/: __init__.py  __main__.py  daemon.py  healthz.py  hermes_exec.py  queue_client.py  settings.py  startup.py  types.py
scripts/: backup-db.sh  restore-db.sh
supabase/: config.toml
tests/: README.md
web/: .env.example  Dockerfile
worker/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
worker/scripts/: bootstrap.sh  check-env.sh  docker-build.sh  gen_db_enums.py  gen_pipeline_stages.py  import-hermes-secrets.sh  serve.sh
worker/skills/: README.md
worker/skills/video-voiceover-broll/: SKILL.md
worker/skills/video-voiceover-broll/references/: broll-themes.md  winning-hooks.md
worker/src/: __init__.py  auth.py  config.py  main.py  supabase_client.py
worker/src/routes/: audit.py  broll.py  chat.py  chat_stream.py  creative.py  health.py  hermes_approval.py  hermes_approval_mode.py  hermes_chat.py  hermes_kanban.py  hermes_webhook.py  integrations.py  launch.py  operator_stage_tools.py  ping.py  pipeline.py  pipeline_tools.py  qa_compliance.py  upload.py  video.py  video_callback.py  work_queue.py
worker/src/services/: __init__.py  _http.py  approval_notifications.py  atomic_inserts.py  atomic_inserts_video.py  audit_persist.py  audit_pull.py  broll_search.py  broll_selection.py  broll_store.py  captions.py  chat_abort.py  claude_runner.py  compliance_engine.py  compliance_rules.py  compliance_rules_seed.py  cost_ledger.py  drive.py  elevenlabs.py  ffmpeg_compose.py  gate_core.py  ghl.py  heartbeat.py  hermes_approval.py  hermes_approval_mode.py  hermes_bridge.py  hermes_kanban.py  hermes_webhook.py  hyperframes.py  image_compositor.py  kie.py  kie_tts.py  kie_video.py  meta.py  notifications.py  observability.py  operator_bridge.py  operator_dispatch_watchdog.py  outbox_consumer.py  outbox_relay.py  (+16 more)
worker/templates/hyperframes/: voiceover-broll.html.j2
worker/tests/: README.md  conftest.py  db_fixtures.py  test_approval_notifications.py  test_atomic_inserts.py  test_atomic_inserts_video.py  test_audit_persist.py  test_audit_pull.py  test_audit_route.py  test_broll_route.py  test_broll_search.py  test_broll_selection.py  test_broll_store.py  test_captions.py  test_chat_abort.py  test_chat_route.py  test_chat_stream.py  test_claude_runner.py  test_compliance_engine.py  test_compliance_golden.py  test_compliance_rules.py  test_compliance_rules_seed.py  test_config.py  test_cost_ledger.py  test_creative_route.py  test_drive.py  test_elevenlabs.py  test_fake_render.py  test_ffmpeg_compose.py  test_ghl.py  test_health.py  test_heartbeat.py  test_hermes_approval.py  test_hermes_approval_mode.py  test_hermes_approval_mode_route.py  test_hermes_approval_route.py  test_hermes_bridge.py  test_hermes_chat_route.py  test_hermes_kanban.py  test_hermes_kanban_route.py  (+50 more)
worker/tests/golden/: README.md
worker/tests/golden/cases/: client_do_not_say.json  financial_special_ad_category.json  ftc_guarantee_no_disclosure.json  health_before_after_banned.json  personal_attributes_fixed_hook.json  personal_attributes_old_hook.json  roofing_before_after.json  video_clean_voiceover.json  video_spoken_financial.json  video_spoken_personal_attributes.json
worker/tests/integration/: conftest.py  test_pg_audit_immutability.py  test_pg_campaign_perf.py  test_pg_cost_fold.py  test_pg_gate_fk.py  test_pg_generation_close_seeds_video_qa.py  test_pg_rollup_predicate.py
worker/tests/queue/: conftest.py  test_auto_emit_trigger.py  test_cancel_propagate_trigger.py  test_claim_atomic.py  test_compute_pipeline_status_parity.py  test_copy_rearm_scope_trigger.py  test_observer_watchdog_db.py  test_outbox_consumer_db.py  test_reducer.py  test_state_machine.py  test_worker_stage_consumer_db.py
worker/tests/routes/: test_work_queue_routes.py
(+866 files in other folders)
