[project]
name = "voxhorizon-operator-daemon"
version = "0.1.0"
description = "VoxHorizon operator daemon: sidecar container that owns the work_item queue's operator_dispatch kind"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "Pedro Veloso" },
]

# The sidecar's job is narrow on purpose: drain operator_dispatch work_items
# from the worker's REST surface, run hermes chat inside the colocated
# hermes-agent-operator container via the Docker socket, and PATCH the row
# closed (complete or fail with a classified error_kind). Dependencies match
# the worker's style where they overlap (structlog, pydantic, httpx) so a
# reader who knows the worker reads this with no surprises.
dependencies = [
    # FastAPI is here ONLY for the /healthz sidecar that the Docker
    # healthcheck probes. Uvicorn drives it. The drain loop is plain asyncio.
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # The worker REST surface (work_queue) is HTTP-bearer-authed. httpx is
    # already the worker's outbound client; reusing it keeps timeouts /
    # connection-pooling behaviour aligned across the two services.
    "httpx>=0.27",
    # Docker SDK for the operator container exec: hermes auth probe + hermes
    # chat invocations both go through the host's /var/run/docker.sock. The
    # worker's hermes_bridge uses the same approach for the ekko sibling.
    "docker>=7.0",
    # Pydantic + pydantic-settings power the settings model AND the work_item
    # / consumer payload models. Same versions the worker pins.
    "pydantic>=2.7",
    "pydantic-settings>=2.5",
    # JSON logging that matches the worker's structlog config (see
    # worker/src/main.py::_configure_logging). One log shape across both
    # services keeps deploy-stack's log scrapers simple.
    "structlog>=24.4",
    # Tenacity backs the transient-error retry path on the queue HTTP client:
    # a 5xx from the worker or a connection blip should backoff and retry,
    # not crash the daemon. Auth (401) and conflict (409) DO crash on purpose.
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    # Coverage gate (mirrors the worker's >=90% lines floor; see
    # [tool.pytest.ini_options] addopts below).
    "pytest-cov>=5.0",
    # respx mocks httpx at the transport layer; used in queue_client tests so
    # we don't need a running worker to exercise the wire shapes.
    "respx>=0.21",
    # FastAPI TestClient lives in starlette; pulling it in explicitly for the
    # /healthz tests.
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voxhorizon_daemon"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
# Coverage gate: the daemon code is small + asyncio-heavy; >=90% lines and
# >=88% branches is the same bar the worker holds. CI's `uv run pytest`
# enforces it.
addopts = "--cov=voxhorizon_daemon --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["voxhorizon_daemon"]
branch = true
omit = ["tests/*", "*/__pycache__/*", ".venv*/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 90

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.21",
    "httpx>=0.27",
]
