[project]
name = "voxhorizon-worker"
version = "0.1.0"
description = "VoxHorizon local worker: FastAPI service the Next.js app talks to over Tailscale"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Pedro Veloso" },
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.5",
    "supabase>=2.8",
    "structlog>=24.4",
    # VAPID Web Push for the Hermes-webhook → operator browser fan-out.
    # Lives under :mod:`services.push_delivery`; consumed by
    # :mod:`services.hermes_webhook` after Wave 18.
    "pywebpush>=2.3.0",
    # Docker SDK powers the Hermes Ekko bridge (HI-1): the worker runs
    # `hermes chat -q ...` inside the colocated `hermes-agent-ekko`
    # container via the Docker socket, streaming stdout back as SSE.
    # Group/socket access is granted by `group_add: ["${DOCKER_GID}"]`
    # in docker-compose.yml; no Dockerfile changes are required.
    "docker>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
