[project]
name = "voxhorizon-worker"
version = "0.1.0"
description = "VoxHorizon local worker: FastAPI service the Next.js app talks to over Tailscale"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Pedro Veloso" },
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.5",
    "supabase>=2.8",
    "structlog>=24.4",
    # Pillow backs the restored image-generation pipeline's compositor step:
    # `services.image_compositor` shells out to the marketing-dept
    # `creative-tools/image_compositor.py` script (text/logo/banner overlays
    # on a Kie.ai base render), which imports PIL. The subprocess runs under
    # the worker's interpreter, so Pillow must be installed here.
    "pillow>=10.4",
    # VAPID Web Push for the Hermes-webhook → operator browser fan-out.
    # Lives under :mod:`services.push_delivery`; consumed by
    # :mod:`services.hermes_webhook` after Wave 18.
    "pywebpush>=2.3.0",
    # Docker SDK powers the Hermes Ekko bridge (HI-1): the worker runs
    # `hermes chat -q ...` inside the colocated `hermes-agent-ekko`
    # container via the Docker socket, streaming stdout back as SSE.
    # Group/socket access is granted by `group_add: ["${DOCKER_GID}"]`
    # in docker-compose.yml; no Dockerfile changes are required.
    "docker>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    # Coverage gate (T.2/#315): CI installs this group via `uv sync --extra dev`
    # and `pytest` enforces `--cov-fail-under=90` (see [tool.pytest.ini_options]).
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
# Coverage gate (T.2/#315 DoD): the worker suite must hold >=90% line coverage.
# `pytest` (plain) now enforces it, so CI's `uv run pytest` is the gate.
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
# `.venv*` test helpers / generated dirs never count toward coverage.
omit = ["tests/*", ".venv*/*"]

# Production coverage gate for the worker. Enforced in CI via
# `uv run pytest --cov=src --cov-report=term-missing` (the report config below
# applies fail_under). Line coverage floor is 90%; rebuild worker code
# (P1-P5) is held to >=90% by the Definition of Done.
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 90

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
